--- a/style.css
+++ b/style.css
@@ -39,3 +39,12 @@ a {
 #rodape {
     text-align: center;
 }
+
+h1 {
+    color: #828271;
+    font-size: 1.2em;
+}
+
+img {
+    border: 10px solid #c3c3ae;
+}
